# otus_library-fastapi

./: .gitignore  alembic.ini  application.py  config.py  pyproject.toml  requirements.txt
api/authors/: crud.py  views.py
api/books/: crud.py  views.py
api/schemas/: author.py  book.py
library_database/: env.py
library_database/versions/: 2022_11_26_1016-cd96ae192d32_authors_and_books_tables.py  2022_11_26_1535-0cc837ade52a_authors_and_books_tables.py
models/: __init__.py  author.py  base.py  book.py  db.py
