[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.44"}
alembic = "^1.8.1"
asyncpg = "^0.27.0"
pg8000 = "^1.29.3"
fastapi = "^0.87.0"

[tool.poetry.group.dev.dependencies]
sqlalchemy-stubs = "^0.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
